croatia-camunda-main@165f814ca62/overlays/sit-nonpci-appdb/camunda-platform/es-statefulset.yaml
# Source: camunda-platform/charts/elasticsearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
spec:
  selector:
    matchLabels:
      app: "elasticsearch-master"
  replicas: 2
  template:
    metadata:
      name: "elasticsearch-master"
    spec:
      securityContext:
        fsGroup: null
        runAsUser: null
      containers:
      - name: "elasticsearch"
        resources:
            limits:
              cpu: '2'
              memory: 6Gi
            requests:
              cpu: '1'
              memory: 6Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: null
