croatia-camunda-main@165f814ca62/overlays/sit-nonpci-appdb/camunda-platform/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camunda
  namespace: camunda
spec:
  host: camunda.apps.dev-nonpci-appdb.npnbank.local
